# agentic-rag-optimised

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.ipynb
rag/: evals.ipynb  test.ipynb
